Bug 228813 - Fail to load jpg files where its path contains unicode chars
Summary: Fail to load jpg files where its path contains unicode chars
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-27 22:55 UTC by Elián Hanisch
Modified: 2010-05-05 11:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2010-02-27 22:55:50 UTC
Version:           2.2 Alpha 1 (using KDE 4.4.0)
Installed from:    Ubuntu Packages

- take any jpg and rename it to tést.jpg
- trying to load it will fail with a "cannot create storage" error
- rename the file to test.jpg and it will open fine.

this only happens with jpgs, other file formats seem to work.
Comment 1 Halla Rempt 2010-02-27 23:11:01 UTC
SVN commit 1096896 by rempt:

bug: 228813 "Fail to load jpg files where its path contains unicode chars"

BUG:228813

 M  +2 -2      kis_jpeg_converter.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1096896
Comment 2 Thomas Tanghus 2010-05-05 10:28:34 UTC
In which version is this fixed? I got the bug in version 2.1.2.
Comment 3 Halla Rempt 2010-05-05 11:40:35 UTC
This was fixed for 2.2, which has just seen a release candidate release.