bug: 228813 "Fail to load jpg files where its path contains unicode chars"

BUG:228813

svn path=/trunk/koffice/; revision=1096896